--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;600;700&display=swap");
 
+.authScrollbar::-webkit-scrollbar {
+  width: 20px;
+}
+
+.authScrollbar::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+.authScrollbar::-webkit-scrollbar-thumb {
+  background: red;
+  border-radius: 10px;
+}
+
+.authScrollbar::-webkit-scrollbar-thumb:hover {
+  background: #b30000;
+}
 
 @tailwind base;
 @tailwind components;
